# haskell-bibtex

./: LICENSE  Makefile  bibtex.cabal
hackage/: hackage.tex  thielemann.tex
publications/: publications.bib  publications.tex
src/: Hackage.hs  Publications.hs
src/Text/BibTeX/: Entry.hs  Format.hs  Parse.hs
src/Text/LaTeX/: Character.hs
tex/: publications.bib
